--- a/proposal.tex
+++ b/proposal.tex
@@ -3,8 +3,29 @@
 % propbody can be used in this context as well as being incorporated
 % in the dissertation (see diss.tex).
 
-\documentstyle[12pt,a4]{article}
+\documentclass[12pt,a4]{scrartcl}
 \begin{document}
+
+\subtitle{Part II Computer Science Project Proposal}
+\title{GPU Acceleration of the Ypnos Programming Language}
+\author{
+S. Pattuzzi, Robinson College\\
+Originator: D. Orchard
+}
+
+\maketitle
+
+\noindent
+\textbf{Project Supervisor:} D. Orchard
+\vspace{0.2in}
+
+\noindent
+\textbf{Director of Studies:} Dr A. Beresford
+\vspace{0.2in}
+\noindent
+ 
+\noindent
+\textbf{Project Overseers:} Dr A. Madhavapeddy \& Dr M. Kuhn
 
 \include{propbody}
 
