--- a/proposal.tex
+++ b/proposal.tex
@@ -3,7 +3,7 @@
 % propbody can be used in this context as well as being incorporated
 % in the dissertation (see diss.tex).
 
-\documentclass[12pt,a4]{scrartcl}
+\documentclass[12pt,a4,parskip=full]{scrartcl}
 \begin{document}
 
 \subtitle{Part II Computer Science Project Proposal}
