--- a/refs.bib
+++ b/refs.bib
@@ -1,11 +1,9 @@
-@BOOK{Lamport86,
-TITLE = "{LaTeX} --- a document preparation system --- user's guide
-and reference manual",
-AUTHOR = "Lamport, L.",
-PUBLISHER = "Addison-Wesley",
-YEAR = "1986"}
-
-@REPORT{Moore95,
-TITLE = "How to prepare a dissertation in LaTeX",
-AUTHOR = "Moore, S.W.",
-YEAR = "1995"}
+@article{greenwade93,
+    author  = "George D. Greenwade",
+    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
+    year    = "1993",
+    journal = "TUGBoat",
+    volume  = "14",
+    number  = "3",
+    pages   = "342--351"
+}
