Made bibtex work.

--- a/refs.bib
+++ b/refs.bib
@@ -1,9 +1,35 @@
-@article{greenwade93,
-    author  = "George D. Greenwade",
-    title   = "The {C}omprehensive {T}ex {A}rchive {N}etwork ({CTAN})",
-    year    = "1993",
-    journal = "TUGBoat",
-    volume  = "14",
-    number  = "3",
-    pages   = "342--351"
-}
+@inproceedings{ypnos,
+ author = {Orchard, Dominic A. and Bolingbroke, Max and Mycroft, Alan},
+ title = {Ypnos: declarative, parallel structured grid programming},
+ booktitle = {Proceedings of the 5th ACM SIGPLAN workshop on Declarative aspects of multicore programming},
+ series = {DAMP '10},
+ year = {2010},
+ isbn = {978-1-60558-859-9},
+ location = {Madrid, Spain},
+ pages = {15--24},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1708046.1708053},
+ doi = {10.1145/1708046.1708053},
+ acmid = {1708053},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {comonads, edsl, parallelism, stencils, structured grids, ypnos},
+} 
+
+@inproceedings{accel,
+ author = {Chakravarty, Manuel M.T. and Keller, Gabriele and Lee, Sean and McDonell, Trevor L. and Grover, Vinod},
+ title = {Accelerating Haskell array codes with multicore GPUs},
+ booktitle = {Proceedings of the sixth workshop on Declarative aspects of multicore programming},
+ series = {DAMP '11},
+ year = {2011},
+ isbn = {978-1-4503-0486-3},
+ location = {Austin, Texas, USA},
+ pages = {3--14},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1926354.1926358},
+ doi = {10.1145/1926354.1926358},
+ acmid = {1926358},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {arrays, data parallelism, dynamic compilation, gpgpu, haskell, skeletons},
+} 
