--- a/proposal.tex
+++ b/proposal.tex
@@ -16,7 +16,7 @@ Originator: D. Orchard
 \maketitle
 
 \noindent
-\textbf{Project Supervisor:} D. Orchard
+\textbf{Project Supervisor:} D. A. Orchard
 \vspace{0.2in}
 
 \noindent
